# chatbot_AI

./: .gitignore  README.md  app.py  pyproject.toml  requirements-mac.txt  requirements.txt
.streamlit/: config.toml
src/: document_processor.py  groq_handler.py  llm_handler.py  openai_handler.py  rag_pipeline.py  utils.py  vector_store.py
vectordb/: metadata.json
