[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.46.0",
    "nltk",
    "pypdf2",
    "python-docx", 
    "numpy",
    "scikit-learn",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"