[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.14"
dependencies = [
    "streamlit>=1.46.0",
    "nltk",
    "pypdf2",
    "python-docx", 
    "numpy",
    "scikit-learn",
    "openai",
]
package-mode = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"